--- a/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager/newaccount.ui
+++ b/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager/newaccount.ui
@@ -94,6 +94,9 @@
    </property>
   </widget>
   <widget class="QLineEdit" name="input_Website">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>140</x>
@@ -117,6 +120,22 @@
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="input_GeneratePassword">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>110</y>
+     <width>92</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Generate</string>
+   </property>
+   <property name="tristate">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
