--- a/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager/mainwindow.ui
+++ b/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager/mainwindow.ui
@@ -16,6 +16,12 @@
     <height>600</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Password Manager (Prototype)</string>
   </property>
